--- a/src/mainPanel/css/borders.css
+++ b/src/mainPanel/css/borders.css
@@ -7,6 +7,14 @@
   margin: 4%;
 }
 
+.mainPanel-listPadding{
+  padding: 30px 0;
+}
+
+.mainPanel-headerListPadding{
+  padding: 0 30px;
+}
+
 .mainPanel-listMargin{
   margin: 10px;
 }
